--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,7 @@ Make utils.h containing all functions -> Make main.cpp cleaner
 no negative amount withdrawal or deposition
 Add successful transaction message in every function.
 wrong pin attempts;
+function to update customer information
+add useless info like gender, aadhaar number, etc. (maybe)
+to unlock account aadhar card info must be shared (maybe)
+pin must contain letter alphabets etc.
