--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,10 @@
 Password Encryption (hashing or something)
 Better UI
 Admin Password Not Hardcoded
-Add a Bank Vault (total money that bank currently has)
 Add Passbook (Transaction) functionality
 Make utils.h containing all functions -> Make main.cpp cleaner
-no negative amount withdrawal or deposition
-Add successful transaction message in every function.
-wrong pin attempts; account locking;
 function to update customer information
-add useless info like gender, aadhaar number, etc. (maybe)
-to unlock account aadhar card info must be shared (maybe)
 pin must contain letter alphabets etc.
+magic numbers and admin password from config file
 
 add a main menu item showing details of application and creator info, version info, etc
