--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 Password Encryption (hashing or something)
 Admin Password Not Hardcoded
-Add Passbook (Transaction) functionality
-magic numbers and admin password from config file
+Add Passbook (Transaction) functionality (later)
+UI (later)
